js/src/jit-test/tests/binast/invalid/labelled-continue-outside-while.binjs
BINJS
[
GRAMMAR
]
identity
;
AssertedBlockScope2AssertedScriptGlobalScope
Block
"
ContinueStatement
"
LabelledStatement0LiteralBooleanExpression
Script
WhileStatement
[
STRINGS
]
identity
;
foo
[
TREE
]
identity
;
